     ignored lines, control over logging, etc) while maintaining look&feel
   * fail2ban-client -- log to standard error. Closes gh-264
   * Fail to configure if not a single log file was found for an
     enabled jail. Closes gh-63
   * <HOST> is now enforced to end with an alphanumeric
   * filter.d/roundcube-auth.conf -- anchored version
  Alexander Dietrich
   * action.d/sendmail-common.conf -- added common sendmail settings file
     and made the sender display name configurable
  Steven Hiscocks
   * filter.d/dovecot - Addition of session, time values and possible blank
     user
   * filter.d/{courier{login,smtp},proftpd,sieve,wuftpd,xinetd} - General
     regex impovements
   * IMPORTANT: 'lighttpd-fastcgi' filter has been renamed to 'suhosin', which
     will require changing in jail.{conf,local} if using this filter.
  Zurd
   * filter.d/postfix - add filter for VRFY failures. closes gh-322.


ver. 0.8.10 (2013/06/12) - wanna-be-secure
-----------

Primarily bugfix and enhancements release, triggered by "bugs" in
apache- filters.  If you are relying on listed below apache- filters,
upgrade asap and seek your distributions to patch their fail2ban
distribution with [6ccd5781].

- Fixes: Yaroslav Halchenko
   * [6ccd5781] filter.d/apache-{auth,nohome,noscript,overflows} - anchor
     failregex at the beginning (and where applicable at the end).
     Addresses a possible DoS. Closes gh-248
   * action.d/{route,shorewall}.conf - blocktype must be defined
     within [Init].  Closes gh-232
- Enhancements
  Yaroslav Halchenko
   * jail.conf -- assure all jails have actions and remove unused
     ports specifications
  Terence Namusonge
   * config/filter.d/roundcube-auth.conf -- support roundcube 0.9+
  Daniel Black
   * files/suse-initd -- update to the copy from stock SUSE
  silviogarbes & Daniel Black
    * Updates to asterisk filter. Closes gh-227/gh-230.
  Carlos Alberto Lopez Perez
    * Updates to asterisk to include AUTH_UNKNOWN_DOMAIN. Closes gh-244.
